# tdk-sozluk

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
tdk/: __init__.py  anlam.py  atasozu.py  ornek.py  sonuc.py  yazar.py
