[metadata]
name = tdk-sozluk
version = 1.0.2
author = Berat Gökgöz
author_email = gokgoz.berat123@gmail.com
description = En iyi TDK sözlük arama kütüphanesi. Best TDK dict. search library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beradi06/tdk-sozluk
project_urls =
    Bug Tracker = https://github.com/beradi06/tdk-sozluk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.3

